--- a/src/layout/index.scss
+++ b/src/layout/index.scss
@@ -6,6 +6,16 @@
   background: rgba(255, 255, 255, 0.3);
 }
 
+
+.author {
+  text-align: center;
+  font-size: 12px;
+  transform: scale(0.8);
+  color: #666;
+  margin: 2px 0;
+  user-select: none;
+}
+
 .ant-row-rtl #components-layout-demo-top-side-2 .logo {
   float: right;
   margin: 16px 0 16px 24px;
